Gtk-3.18: [Budgie-Desktop] Fix missing 'fucused' state inside the main-menu
When navigating items with up/down key-strokes, item-label was invisible.

--- a/gtk/sass/3.18/_3rd-party.scss
+++ b/gtk/sass/3.18/_3rd-party.scss
@@ -222,11 +222,14 @@ $orientation: ((top, bottom),
       transition: none;
     }
     &:hover,
-    &.activatable:hover {
+    &.activatable:hover,
+    &:selected,
+    &.activatable:selected {
       background-image: none;
       background-color: $secondary_base_color;
-      color: $fg_color;
       transition: none;
+
+      &, & .label { color: $fg_color; }
     }
   }
 
